Button visibility fix

--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,7 @@ main {
     color: white;
     overflow: hidden;
     border-radius: 10px;
+    position: relative;
 }
 
 
@@ -117,7 +118,8 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 150px;
+    height: max-content;
+    margin-top: 50px;
 }
 
 .profile-pic {
@@ -125,6 +127,8 @@ main {
     border: 2px solid white;
     width: 100px;
     height: 100px;
+    position: absolute;
+    top: 5.6%;
 }
 
 .follow-btn {
@@ -376,7 +380,6 @@ footer {
     align-items: center;
     width: 500px;
     height: 300px;
-    margin: 20px 0;
     position: relative;
     overflow: hidden;
 }
@@ -451,5 +454,8 @@ footer {
     #contribution-graph {
         width: 96%;
         min-width: 96%;
+    }
+    body {
+        overflow-x: hidden;
     }
 }
